# python_package_template

./: .editorconfig  LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.__package_slug}}/: LICENSE  README.md  makefile  pyproject.toml
{{cookiecutter.__package_slug}}/.github/workflows/: python-package.yml
{{cookiecutter.__package_slug}}/src/{{cookiecutter.__package_slug}}/: __main__.py
{{cookiecutter.__package_slug}}/tests/: test_{{cookiecutter.__package_slug}}.py
